# SplitToningTest

./: CMakeLists.txt  README.md  main.cpp
split-toner/: CMakeLists.txt  toner.cpp  toner.h
