cmake_minimum_required(VERSION 3.3)
project(split-toner)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(${PROJECT_NAME}_INCLUDES_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(${PROJECT_NAME}_SOURCES_DIR ${CMAKE_CURRENT_SOURCE_DIR})


file(GLOB_RECURSE ${PROJECT_NAME}_INCLUDES ${${PROJECT_NAME}_INCLUDES_DIR}/*.h)
file(GLOB_RECURSE ${PROJECT_NAME}_CXX_SOURCES ${${PROJECT_NAME}_SOURCES_DIR}/*.cpp)

list(APPEND ${PROJECT_NAME}_SOURCES ${${PROJECT_NAME}_CXX_SOURCES})
list(APPEND ${PROJECT_NAME}_FILES ${${PROJECT_NAME}_INCLUDES} ${${PROJECT_NAME}_SOURCES})

add_library(${PROJECT_NAME} SHARED ${${PROJECT_NAME}_FILES})
target_include_directories(${PROJECT_NAME} PUBLIC ${${PROJECT_NAME}_INCLUDES_DIR})
